Fixed blurring effect of navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,6 +140,7 @@ body{
 nav{
   background-color: rgba(7, 26, 53, 0.85);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 /* Apply animations to the SVG elements */
